# nur

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  commitlint.config.js  justfile  nurfile  nurfile.local
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: lint.yml  release.nu  release.yml  test-nur.yml  test.yml
crates/embed-nu/: Cargo.toml  README.md
crates/embed-nu/src/: error.rs  into_expression.rs  into_value.rs  lib.rs  utils.rs
crates/embed-nu/src/context/: bindings.rs  builder.rs  command_group_config.rs
crates/embed-nu/tests/: test_value.rs
nur-tests/: nurfile
scripts/: nur-completions.bash  nur-completions.nu  nur-completions.zsh  nurify.nu
src/: args.rs  argument.rs  compat.rs  context.rs  defaults.rs  engine.rs  errors.rs  execute.rs  into_expression.rs  into_value.rs  main.rs  names.rs  nu_version.rs  path.rs  scripts.rs  state.rs
src/commands/: mod.rs  nur.rs
src/context/: bindings.rs  mod.rs
src/nu-scripts/: default_nur_config.nu  default_nur_env.nu
tests/: test_eval.rs
wix/: License.rtf  main.wxs
