[package]
name = "nur"
description = "nur - a taskrunner based on nu shell"
version = "0.12.1"
rust-version = "1.81.0"
edition = "2021"
license = "MIT"
homepage = "https://nur-taskrunner.github.io/docs/"
repository = "https://github.com/nur-taskrunner/nur"
readme = "README.md"
authors = ["David Danier <david.danier@gmail.com>"]
keywords = ["nu", "taskrunner", "development", "command-line", "utility"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
nu-cli = "0.101.0"
nu-cmd-extra = "0.101.0"
nu-cmd-lang = "0.101.0"
nu-command = "0.101.0"
nu-engine = "0.101.0"
nu-explore = "0.101.0"
nu-parser = "0.101.0"
nu-protocol = "0.101.0"
nu-std = "0.101.0"
nu-utils = "0.101.0"
thiserror = "2.0.9"
miette = { version = "7.3", features = ["fancy-no-backtrace", "fancy"] }
nu-ansi-term = "0.50.1"
nu-path = "0.101.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
default = []
static-link-openssl = ["dep:openssl", "nu-cmd-lang/static-link-openssl"]
debug = []

[dev-dependencies]
tempfile = "3.14.0"

[profile.release]
opt-level = "s"     # Optimize for size
strip = "debuginfo"
lto = "thin"
